fix: swagger doc user travel
