# storage/api-docs/api-docs.json
@@ -610,7 +610,7 @@
         "/api/user/travel-request": {
             "get": {
                 "tags": [
-                    "Travel Requests"
+                    "User Travel Requests"
                 ],
                 "summary": "Listar solicitações de viagem",
                 "description": "Lista todas as solicitações de viagem do usuário autenticado. Todos os parâmetros de filtro são opcionais.",
@@ -728,7 +728,7 @@
             },
             "post": {
                 "tags": [
-                    "Travel Requests"
+                    "User Travel Requests"
                 ],
                 "summary": "Criar nova solicitação de viagem",
                 "description": "Cria uma nova solicitação de viagem para o usuário autenticado",
@@ -841,7 +841,7 @@
         "/api/user/travel-request/{travelRequestId}": {
             "get": {
                 "tags": [
-                    "Travel Requests"
+                    "User Travel Requests"
                 ],
                 "summary": "Obter detalhes de uma solicitação de viagem",
                 "description": "Retorna os detalhes de uma solicitação de viagem específica",
@@ -892,7 +892,7 @@
             },
             "patch": {
                 "tags": [
-                    "Travel Requests"
+                    "User Travel Requests"
                 ],
                 "summary": "Cancelar uma solicitação de viagem",
                 "description": "Cancela uma solicitação de viagem específica do usuário (não pode cancelar se aprovada)",
@@ -1933,7 +1933,7 @@
             "description": "Endpoints para autenticação de usuários"
         },
         {
-            "name": "Travel Requests",
+            "name": "User Travel Requests",
             "description": "API Endpoints para gerenciamento de solicitações de viagem"
         },
         {
